# cheatsheet

./: .bazelrc  .clang-format  .gitmodules  BUILD  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  example_test.py  my_pb_mod.cc  requirements_lock.txt
app/: BUILD  main.cxx
data/: BUILD
examples/: CMakeLists.txt
examples/boost_multi_index_container/: BUILD  CMakeLists.txt  basic.cpp  main.cpp
examples/ceres_solver/: BUILD  main.cpp
examples/ceres_solver/common/: BUILD  pose3.h  pose3.hpp  pose3_manifolds.cpp  pose3_manifolds.hpp  pose3_test.cpp  quaternion_utils.cpp  quaternion_utils.h  quaternion_utils.hpp  quaternion_utils_test.cpp  residuals.h  residuals.hpp  rotation_manifold.cpp  rotation_manifold.h  rotation_manifold.hpp  sized_parameter_block.h  sized_parameter_block.hpp  types.h
examples/ceres_solver/factors/: BUILD  between_factor.cpp  between_factor.h  between_factor.hpp  between_factor_test.cpp  prior_factor.h  prior_factor.hpp  prior_factor_test.cpp  utils.h  utils.hpp
examples/cpp_basics/: CMakeLists.txt
examples/cpp_basics/module/: BUILD  CMakeLists.txt  foo.cppm  main.cpp
examples/cpp_basics/stringizing/: CMakeLists.txt  main.cpp
examples/cuda/basic/: kernel.cu  main.cpp
examples/cxx_basics/: CMakeLists.txt
examples/cxx_basics/module/: CMakeLists.txt
examples/cxx_basics/stringizing/: BUILD  main.cpp
examples/eigen/: BUILD  fixed_size_vectorization.cpp
examples/opencv/: BUILD  CMakeLists.txt  cpu_rendering.cpp  gpu_rendering.cpp  main.cpp  viz3d.cpp
examples/opengl/: BUILD  CMakeLists.txt  main.cpp  shader.cpp  shader.hpp
examples/opengl/shaders/: BUILD  default.vs
examples/protobuf/: BUILD  foo.proto  main.cpp
examples/streamlit/: BUILD  main.py
modules/common/: BUILD  id_generator.h  id_generator.hpp
modules/employee/: BUILD  employee.cpp  employee.cxx  employee.h  pyregister.cpp  pywrapper.cpp
modules/employer/: BUILD  employer.cpp  employer.h  employer.hpp  pyregister.cpp  pywrapper.cpp
modules/employer/test/: BUILD  test.py
modules/greet/: BUILD  greet.cpp  greet.cxx  greet.h  greet.hpp  pyregister.cpp  pywrapper.cxx
modules/greet/test/: BUILD  test.py
modules/hello/: BUILD  hello.cpp  hello.cxx  hello.h
modules/world/: BUILD  world.cpp  world.cxx  world.h  world.hpp
pybind/greet/: BUILD  test.py  wrapper.cxx
scripts/docker/: start_container.sh
toolchain/docker/: Dockerfile  build_image.sh  start_container.sh
